<resources>
    <string name="app_name">Trycorder</string>

    <string name="activity_contacts_list">Contacts List</string>
    <string name="activity_contact_budget">Contacts Budget</string>
    <string name="activity_contact_detail">Contact Detail</string>
    <string name="activity_contact_admin">Contact Admin</string>
    <string name="activity_contact_editmemo">Contact Edit Memo</string>
    <string name="activity_contact_edittrans">Contact Edit Transaction</string>
    <string name="contacts_list_search_results_title">Contacts List Search for \"%s\"</string>
    <string name="app_description">This is a sample app, demonstrating use of the Android system Contacts Provider.</string>
    <string name="imageview_description">Contact Thumbnail</string>
    <string name="address_button_description">View Address</string>
    <string name="admin_addbutton_description">Add Transaction</string>
    <string name="admin_editbutton_description">Edit Transaction</string>
    <string name="notes_button_description">Edit Notes</string>
    <string name="phone_button_description">Edit Phone</string>
    <string name="email_button_description">Edit Email</string>
    <string name="transaction_button_description">Edit Transaction</string>
    <string name="menu_search">Search</string>
    <string name="menu_add_contact">Add Contact</string>
    <string name="menu_edit_contact">Edit Contact</string>
    <string name="menu_modif_contact">Modify Contact</string>
    <string name="menu_starred">Starred Contact</string>
    <string name="menu_budget">Budget</string>
    <string name="no_contacts">No Contacts Found</string>
    <string name="no_contact_selected">No Contact Selected</string>
    <string name="search_hint">Find contacts</string>

    <!-- Used for the AlphabetIndexer in ContactsListFragment to provide quick navigation by
         alphabet using ListView fast scroll. -->
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

    <!-- When using ContactsContract.Contacts#CONTENT_FILTER_URI to search contacts, a match occurs
         when using a number of different fields, such as name, e-mail address, address, phone
         number, etc. When a match occurs that is not the name, there is currently no way to tell
         which other field was matched. This string is displayed in the secondary display text in
         ContactsListFragment when a search query match occurs that is not the display name.
         -->
    <string name="search_match_other">Matches Other Field</string>

    <string name="no_address">No addresses found</string>
    <string name="no_admin">No transaction found</string>
    <string name="no_notes">No notes found</string>
    <string name="no_intent_found">No application found to handle this action!</string>
    <string name="yes_intent_found">Application found.</string>

    <string name="admin_description_texthint">Transaction Description</string>
    <string name="admin_date_texthint">2016-12-31</string>

</resources>
