<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (C) 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<!-- This layout is used by ContactAdminFragment to show contact details: contact photo, contact
     display name and a dynamic number of addresses (if the contact has any) inside a ScrollView.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    android:weightSum="100">

    <!-- top of the detail screen -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="@android:color/black"
        android:orientation="horizontal"
        android:weightSum="10">

        <ImageButton
            android:id="@+id/backtop_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/button_margin"
            android:layout_marginBottom="@dimen/button_margin"
            android:layout_weight="7"
            android:background="@android:color/black"
            android:scaleType="fitXY"
            android:src="@drawable/trek_topleft"
            android:text="TALK" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@android:color/black"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:orientation="horizontal"
                android:weightSum="6">

                <Button
                    android:id="@+id/back_button"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="@dimen/button_margin"
                    android:layout_marginStart="@dimen/button_margin"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:background="@drawable/trekbutton_indigo_center"
                    android:maxLines="1"
                    android:text="BACK"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/edit_button"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="@dimen/button_margin"
                    android:layout_marginStart="@dimen/button_margin"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:background="@drawable/trekbutton_blue_right"
                    android:maxLines="1"
                    android:text="EDIT"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:orientation="horizontal"
                android:weightSum="6">

                <TextView
                    android:id="@+id/starred_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Starred"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <!-- static part of client -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <ImageView
                android:id="@+id/contact_image"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="35"
                android:contentDescription="@string/imageview_description"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_contact_picture" />

            <TextView
                android:id="@+id/contact_name"
                style="@style/contactNameTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="65"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding"
                android:paddingTop="8dp"
                android:text="Full Name" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:layout_weight="1"
            android:scaleType="fitXY"
            android:src="@drawable/trek_topleft" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_weight="8"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:scaleType="fitXY"
            android:src="@drawable/trek_horizontalline" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:layout_weight="1"
            android:scaleType="fitXY"
            android:src="@drawable/trek_topright" />

    </LinearLayout>

    <!-- scrollable part of client -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="70">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_blue_light"
                    android:textStyle="bold"
                    android:text="MEMO" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="32dp"
                    android:orientation="horizontal"
                    android:showDividers="middle">

                    <TextView
                        android:id="@+id/contact_memo_item"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:hint="Text Note"
                        android:paddingRight="@dimen/padding"
                        android:text=""
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"/>

                    <ImageButton
                        android:id="@+id/button_edit_memo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/notes_button_description"
                        android:background="@android:color/black"
                        android:src="@drawable/ic_menu_edit" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/trekbutton_indigo"
                android:minHeight="32dp"
                android:orientation="horizontal"
                android:showDividers="middle">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="8"
                    android:paddingLeft="@dimen/padding"
                    android:paddingRight="@dimen/padding"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:text="DESCRIPTION" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:gravity="right"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:text="AMOUNT" />

                <ImageButton
                    android:id="@+id/button_add_admin"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/admin_addbutton_description"
                    android:src="@drawable/ic_action_add" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/contact_transaction_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="32dp"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/trekbutton_indigo"
                android:minHeight="32dp"
                android:orientation="horizontal"
                android:showDividers="middle">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="8"
                    android:gravity="right"
                    android:paddingLeft="@dimen/padding"
                    android:paddingRight="@dimen/padding"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:text="TOTAL" />

                <TextView
                    android:id="@+id/contact_transaction_total"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:gravity="right"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:text="0.00" />

                <ImageButton
                    android:id="@+id/button_save_transaction"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:contentDescription="@string/admin_addbutton_description"
                    android:background="@android:color/transparent"
                    android:visibility="visible"
                    android:src="@drawable/ic_menu_save" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/contact_address_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <LinearLayout
                android:id="@+id/contact_phone_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <LinearLayout
                android:id="@+id/contact_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:layout_weight="1"
            android:scaleType="fitXY"
            android:src="@drawable/trek_bottomleft" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_gravity="bottom"
            android:layout_weight="8"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:scaleType="fitXY"
            android:src="@drawable/trek_horizontalline" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:layout_weight="1"
            android:scaleType="fitXY"
            android:src="@drawable/trek_bottomright" />

    </LinearLayout>

</LinearLayout>

